# mdreader

./: .bumpversion.toml  .gitignore  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/mdreader/: __init__.py  fmi2.py
tests/: test_fmi2.py
tests/samples/fmi2/: test1.xml  test2.xml  test3.xml  test4.xml
