[project]
name = "mdreader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "coder", email = "coder@timeintegral.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5,<3.0.0",
]

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
